# chatbox

./: chatbox.db  main.py  pyproject.toml
api/: Settings.py  lifespan.py
api/models/: auth.py
api/routes/: __init__.py  auth.py  core.py  files.py
db/: database.py  model.py  models.py
utils/: auth.py
